#10684 공통 태그 디자인 점검 및 적용(editable) #10771 공통 태그 readonly 디자인 수정
+ 일부 UI element z-prefix 추가

--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -467,7 +467,7 @@ label {
   color: $element-font-color;
   outline: none;
 
-  .label {
+  .#{$common-prefix}label {
     display: inline-block;
     height: 1.125rem; // 18px
     margin-left: 3rem; // 48px
@@ -768,7 +768,7 @@ label {
 
     &:not(:disabled) {
       + span { cursor: pointer; }
-      ~ .label { cursor: pointer; }
+      ~ .#{$common-prefix}label { cursor: pointer; }
       &:checked {
         + span {
           // 체크 기호
@@ -804,7 +804,7 @@ label {
           border-color: $element-disabled-font-color;
         }
       }
-      ~ .label {
+      ~ .#{$common-prefix}label {
         color: $element-disabled-font-color;
       }
     }
@@ -880,7 +880,7 @@ label {
 
     &:not(:disabled) {
       + span { cursor: pointer; }
-      ~ .label { cursor: pointer; }
+      ~ .#{$common-prefix}label { cursor: pointer; }
 
       &:checked {
         + span {
@@ -911,7 +911,7 @@ label {
           background-color: $element-disabled-bg-color;
         }
       }
-      ~ .label {
+      ~ .#{$common-prefix}label {
         color: $element-disabled-font-color;
       }
       &:checked {
