--- a/src/main/resources/public/template/custom-code/customCodePopup.html
+++ b/src/main/resources/public/template/custom-code/customCodePopup.html
@@ -27,7 +27,7 @@
                         <label class="z-radio" th:for="${customCode.key}" tabindex="0">
                             <input type="radio" name="customCode" th:id="${customCode.key}" th:value="${customCode.value}"/>
                             <span></span>
-                            <span class="label" th:text="${customCode.value}"></span>
+                            <span class="z-label" th:text="${customCode.value}"></span>
                         </label>
                     </li>
                     <li id="no-data" th:style="${#arrays.isEmpty(customCodeDataList)} ? '' : 'display: none'">
