--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -34,13 +34,13 @@
                                th:checked="${customCode?.type == null || customCode?.type == 'table'}"
                                onclick="changeContainer('table')" disabled>
                         <span></span>
-                        <span class="label" th:text="#{customCode.label.table}"></span>
+                        <span class="z-label" th:text="#{customCode.label.table}"></span>
                     </label>
                     <label class="z-radio" for="code" tabindex="0">
                         <input id="code" name="type" type="radio"
                                th:checked="${customCode?.type == 'code'}" disabled>
                         <span></span>
-                        <span class="label" th:text="#{customCode.label.code}"></span>
+                        <span class="z-label" th:text="#{customCode.label.code}"></span>
                     </label>
                 </div>
             </div>
