--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -52,7 +52,7 @@
                             <label class="z-checkbox z-checkbox-all">
                                 <input type="checkbox" id="selectAll" name="selectAll" onclick="selectAll()"/>
                                 <span></span>
-                                <span class="label" th:text="#{role.btn.selectAll}"/>
+                                <span class="z-label" th:text="#{role.btn.selectAll}"/>
                             </label>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                                 <label class="z-checkbox" th:for="${auth?.authId}" tabindex="0">
                                     <input type="checkbox" name="roleAuth" th:id="${auth?.authId}" th:value="${auth?.authName}" th:checked="${auth?.authDesc == 'checked'}">
                                     <span></span>
-                                    <span class="label" th:text="${auth?.authName}"></span>
+                                    <span class="z-label" th:text="${auth?.authName}"></span>
                                 </label>
                             </li>
                         </ul>
