--- a/src/main/resources/public/template/layout/fragments/commonHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonHead.html
@@ -16,12 +16,12 @@
     <script th:src="@{/assets/js/lib/zAlert.js}"></script>
     <script th:src="@{/assets/js/lib/zUtil.js}"></script>
     <script th:src="@{/assets/js/lib/zSelectBox.js}"></script>
+    <script th:src="@{/assets/js/lib/zPaging.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
     <script th:src="@{/assets/js/lib/zDatetimepicker.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/js/lib/zFileuploader.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
-    <script th:src="@{/assets/vendors/quill/quill.custom.js}"></script>
     <script th:src="@{/assets/vendors/toastify/toastify.custom.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
