--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -1,48 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
-    <input th:type="hidden" id="totalCount" name="totalCount" th:value="${noticeCount}"/>
-    <table class="list-table">
-        <thead class="list-head">
-            <tr class="flex-row align-items-center">
-                <th style="width:30%;" class="align-left" th:text="#{common.label.title}"></th>
-                <th style="width:5%;" class="align-center" th:text="#{notice.label.popUp}"></th>
-                <th style="width:10%;" class="align-center" th:text="#{common.label.writer}"></th>
-                <th style="width:20%;" class="align-left" th:text="#{notice.label.popUpPeriod}"></th>
-                <th style="width:20%;" class="align-left" th:text="#{notice.label.noticePeriod}"></th>
-                <th style="width:15%;" class="align-left" th:text="#{common.label.writeDate}"></th>
-            </tr>
-        </thead>
-        <tbody class="list-body">
-            <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(noticeList)}">
-                <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
-            </tr>
-            <tr class="flex-row align-items-center notice-pinned " th:each="topNotice, i: ${topNoticeList}"
-                th:if="not ${#arrays.isEmpty(noticeList)} and ${i.count} < 4">
-                <td style="width:30%;" class="align-left underline">
-                    <a sec:authorize="!hasAuthority('notice.update')" th:text="${topNotice.noticeTitle}"
-                       th:href="@{/notices/{id}/view(id=${topNotice.noticeNo})}">
-                    </a>
-                    <a sec:authorize="hasAuthority('notice.update')" th:text="${topNotice.noticeTitle}"
-                       th:href="@{/notices/{id}/edit(id=${topNotice.noticeNo})}"></a>
-                </td>
-                <td style="width:5%;" th:if="${topNotice.popYn}" class="align-center">
-                    <button type="button" class="z-button-icon form" th:onclick="openPopUp([[${topNotice.noticeNo}]], [[${topNotice.popWidth}]], [[${topNotice.popHeight}]])">
-                        <span class="z-icon i-popup"></span>
-                    </button>
-                </td>
-                <td style="width:5%;" class="align-center" th:unless="${topNotice.popYn}"></td>
-                <td style="width:10%;" class="align-center" th:text="${topNotice?.createUserName}"></td>
-                <td style="width:20%;" class="align-left date-time" name="popDt" th:text="${topNotice.popStrtDt} + '~' + ${topNotice.popEndDt}"></td>
-                <td style="width:20%;" class="align-left date-time" name="noticeDt" th:text="${topNotice.topNoticeStrtDt} + '~' + ${topNotice.topNoticeEndDt}"/>
-                <td style="width:15%;" class="align-left date-time" name="createDt" th:text="${topNotice.createDt}"></td>
-            </tr>
-            <th:block th:fragment="list">
-                <tr class="flex-row align-items-center" th:each="notice : ${noticeList}">
+<table class="list-table">
+    <thead class="list-head">
+        <tr class="flex-row align-items-center">
+            <th style="width:30%;" class="align-left" th:text="#{common.label.title}"></th>
+            <th style="width:5%;" class="align-center" th:text="#{notice.label.popUp}"></th>
+            <th style="width:10%;" class="align-center" th:text="#{common.label.writer}"></th>
+            <th style="width:20%;" class="align-left" th:text="#{notice.label.popUpPeriod}"></th>
+            <th style="width:20%;" class="align-left" th:text="#{notice.label.noticePeriod}"></th>
+            <th style="width:15%;" class="align-left" th:text="#{common.label.writeDate}"></th>
+        </tr>
+    </thead>
+    <tbody class="list-body">
+        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(noticeList)}">
+            <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
+        </tr>
+        <tr class="flex-row align-items-center notice-pinned " th:each="topNotice, i: ${topNoticeList}"
+            th:if="not ${#arrays.isEmpty(noticeList)} and ${i.count} < 4">
+            <td style="width:30%;" class="align-left underline">
+                <a sec:authorize="!hasAuthority('notice.update')" th:text="${topNotice.noticeTitle}"
+                   th:href="@{/notices/{id}/view(id=${topNotice.noticeNo})}">
+                </a>
+                <a sec:authorize="hasAuthority('notice.update')" th:text="${topNotice.noticeTitle}"
+                   th:href="@{/notices/{id}/edit(id=${topNotice.noticeNo})}"></a>
+            </td>
+            <td style="width:5%;" th:if="${topNotice.popYn}" class="align-center">
+                <button type="button" class="z-button-icon form" th:onclick="openPopUp([[${topNotice.noticeNo}]], [[${topNotice.popWidth}]], [[${topNotice.popHeight}]])">
+                    <span class="z-icon i-popup"></span>
+                </button>
+            </td>
+            <td style="width:5%;" class="align-center" th:unless="${topNotice.popYn}"></td>
+            <td style="width:10%;" class="align-center" th:text="${topNotice?.createUserName}"></td>
+            <td style="width:20%;" class="align-left date-time" name="popDt" th:text="${topNotice.popStrtDt} + '~' + ${topNotice.popEndDt}"></td>
+            <td style="width:20%;" class="align-left date-time" name="noticeDt" th:text="${topNotice.topNoticeStrtDt} + '~' + ${topNotice.topNoticeEndDt}"/>
+            <td style="width:15%;" class="align-left date-time" name="createDt" th:text="${topNotice.createDt}"></td>
+        </tr>
+
+            <tr class="flex-row align-items-center" th:each="notice : ${noticeList}">
                 <td style="width:30%;" class="align-left underline">
                     <a sec:authorize="!hasAuthority('notice.update')" th:text="${notice.noticeTitle}"
                        th:href="@{/notices/{id}/view(id=${notice.noticeNo})}"></a>
@@ -60,8 +53,10 @@
                 <td style="width:20%;" class="align-left date-time" name="noticeDt" th:text="${notice.topNoticeStrtDt} + '~' + ${notice.topNoticeEndDt}"></td>
                 <td style="width:15%;" class="align-left date-time" name="createDt" th:text="${notice.createDt}"></td>
             </tr>
-            </th:block>
-        </tbody>
-    </table>
-</body>
-</html>
+    </tbody>
+</table>
+<input th:type="hidden" id="totalCount" name="totalCount" th:value="${pagingInfo.totalCount}">
+<input th:type="hidden" id="totalCountWithoutCondition" name="totalCountWithoutCondition" th:value="${pagingInfo.totalCountWithoutCondition}">
+<input th:type="hidden" id="currentPageNum" name="currentPageNum" th:value="${pagingInfo.currentPageNum}">
+<input th:type="hidden" id="totalPageNum" name="totalPageNum" th:value="${pagingInfo.totalPageNum}">
+<input th:type="hidden" id="orderType" name="totalPageNum" th:value="${pagingInfo.orderType}">
