alice-wrapper > z-wrapper 변경 및 포탈 공통 레이아웃 수정

--- a/src/main/resources/public/scss/portal/_login.scss
+++ b/src/main/resources/public/scss/portal/_login.scss
@@ -3,6 +3,10 @@
  * 파일 경로 : portal/_login.scss
  */
 .login {
+  &-main {
+    height: 100%;
+  }
+
   &-logo {
     @include relative($top: $login-logo-position-top, $left: $login-logo-position-left);
   }
