--- a/src/main/resources/public/template/formDesigner/formDesigner.html
+++ b/src/main/resources/public/template/formDesigner/formDesigner.html
@@ -59,7 +59,7 @@
     </script>
 </head>
 <body>
-<div class="alice-wrapper">
+<div class="z-wrapper">
     <form id="frm" name="frm">
         <div class="z-form-container">
             <!-- 상단 네비게이션 -->
