--- a/src/main/resources/public/template/layout/defaultLayout.html
+++ b/src/main/resources/public/template/layout/defaultLayout.html
@@ -7,7 +7,7 @@
 		<th:block layout:fragment="scriptLink"></th:block>
 	</head>
 	<body>
-		<div class="alice-wrapper">
+		<div class="z-wrapper">
 			<div class="itsm-container flex-row">
 				<div>
 					<div class="z-gnb">
