--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -7,30 +7,32 @@
     <title th:text="#{download.label.download}"></title>
 </head>
 <body>
-<th:block layout:fragment="content">
-    <div class="download-header">
-        <div class="header-title flex-row align-items-baseline">
-            <h1 th:text="#{download.label.download}"></h1>
-            <h6 class="description ml-2" th:text="#{download.msg.portalDescription}"></h6>
+<th:block layout:fragment="portalContent">
+    <div class="main">
+        <div class="download-header">
+            <div class="header-title flex-row align-items-baseline">
+                <h1 th:text="#{download.label.download}"></h1>
+                <h6 class="description ml-2" th:text="#{download.msg.portalDescription}"></h6>
+            </div>
+            <div class="download-search">
+                <form id="searchFrm">
+                    <select id="category" name="category" class="col-3">
+                        <option value="" th:text="#{download.category.all}"></option>
+                        <option th:each="category: ${categoryList}" th:value="${category.code}" th:text="#{${category.code}}"></option>
+                    </select>
+                    <input type="text" id="search" name="search" class="z-input i-search col-5" maxlength="100"
+                           th:placeholder="#{download.label.searchPlaceholder}"/>
+                    <input type="text" id="fromDt" name="fromDt" class="z-input i-date-picker search-date col-3"/>
+                    <span>~</span>
+                    <input type="text" id="searchToDt" name="searchToDt" class="z-input i-date-picker search-date col-3 mr-2"/>
+                    <input type="hidden" id="toDt" name="toDt" readonly="readonly" class="search-date"/>
+                    <span id="spanTotalCount" class="search-count"></span>
+                </form>
+            </div>
         </div>
-        <div class="download-search">
-            <form id="searchFrm">
-                <select id="category" name="category" class="col-3">
-                    <option value="" th:text="#{download.category.all}"></option>
-                    <option th:each="category: ${categoryList}" th:value="${category.code}" th:text="#{${category.code}}"></option>
-                </select>
-                <input type="text" id="search" name="search" class="z-input i-search col-5" maxlength="100"
-                       th:placeholder="#{download.label.searchPlaceholder}"/>
-                <input type="text" id="fromDt" name="fromDt" class="z-input i-date-picker search-date col-3"/>
-                <span>~</span>
-                <input type="text" id="searchToDt" name="searchToDt" class="z-input i-date-picker search-date col-3 mr-2"/>
-                <input type="hidden" id="toDt" name="toDt" readonly="readonly" class="search-date"/>
-                <span id="spanTotalCount" class="search-count"></span>
-            </form>
+        <div class="download-content">
+            <div class="list" id="downloadList"></div>
         </div>
-    </div>
-    <div class="download-content">
-        <div class="list" id="downloadList"></div>
     </div>
 </th:block>
 </body>
