--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -760,7 +760,7 @@ input, button, select, optgroup, textarea {
  * @author jy.lim
  * @version 1.0
  */
-.alice-wrapper {
+.z-wrapper {
   display: flex;
   max-width: 120rem;
   margin: 0 auto;
@@ -4715,6 +4715,9 @@ table tbody tr:hover {
  * 로그인
  * 파일 경로 : portal/_login.scss
  */
+.login-main {
+  height: 100%;
+}
 .login-logo {
   position: relative;
   top: 5rem;
@@ -4792,6 +4795,9 @@ table tbody tr:hover {
  * 회원 가입
  * 파일 경로 : portal/_signup.scss
  */
+.signup-main {
+  height: 100%;
+}
 .signup-logo {
   position: relative;
   top: 5rem;
@@ -4832,6 +4838,9 @@ table tbody tr:hover {
  * 파일 경로 : _error.scss
  * URL : /error
  */
+.error-main {
+  height: 100%;
+}
 .error-background {
   width: 50vw;
   height: 100vh;
@@ -4843,7 +4852,6 @@ table tbody tr:hover {
   top: -59.1875rem;
   margin: 5rem 0 0 5rem;
 }
-
 .error-form {
   width: 50vw;
   padding: 16.875rem 5.625rem;
@@ -4866,6 +4874,9 @@ table tbody tr:hover {
  * 파일 경로 : _session-invalid.scss
  * URL : /sessionInValid
  */
+.session-main {
+  height: 100%;
+}
 .session-background {
   width: 50vw;
   height: 100vh;
@@ -4877,7 +4888,6 @@ table tbody tr:hover {
   top: -59.1875rem;
   margin: 5rem 0 0 5rem;
 }
-
 .session-form {
   width: 50vw;
   padding: 21.5625rem 6.25rem;
@@ -4886,7 +4896,7 @@ table tbody tr:hover {
 .session-form h1 {
   line-height: 1.7;
 }
-.session-form .session-count-txt {
+.session .session-count-txt {
   color: #0098FF;
 }
 
@@ -4895,10 +4905,11 @@ table tbody tr:hover {
  * 파일 경로 : portal/_browser-guide.scss
  * URL : .../portal/browserGuide
  */
-.guide-body {
+.browser-guide-main {
+  height: 100%;
   background-color: #F7F8F9;
 }
-.guide-body h1 {
+.browser-guide-main h1 {
   margin: 14.81rem 19.6875rem 3.75rem 19.6875rem;
 }
 
@@ -4929,6 +4940,9 @@ table tbody tr:hover {
  * 파일 경로 : _email-certification.scss
  * URL : /certification/status
  */
+.email-certificate-main {
+  height: 100%;
+}
 .email-certificate-background {
   width: 50vw;
   height: 100vh;
@@ -4940,7 +4954,6 @@ table tbody tr:hover {
   top: -59.1875rem;
   margin: 5rem 0 0 5rem;
 }
-
 .email-certificate-form {
   width: 50vw;
   padding: 21.5625rem 6.25rem;
