--- a/src/main/resources/public/scss/portal/_browser-guide.scss
+++ b/src/main/resources/public/scss/portal/_browser-guide.scss
@@ -4,7 +4,8 @@
  * URL : .../portal/browserGuide
  */
 
-.guide-body {
+.browser-guide-main {
+  height: 100%;
   background-color: $browser-guide-bg-color;
   
   h1 {
