--- a/src/main/resources/public/template/layout/fragments/commonPortalHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonPortalHead.html
@@ -13,6 +13,7 @@
     <script th:src="@{/assets/js/lib/zAlert.js}"></script>
     <script th:src="@{/assets/js/lib/zUtil.js}"></script>
     <script th:src="@{/assets/js/lib/zSelectBox.js}"></script>
+    <script th:src="@{/assets/js/lib/zModal.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
     <script th:src="@{/assets/js/lib/zDatetimepicker.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
