--- a/src/main/resources/public/template/layout/popupLayout.html
+++ b/src/main/resources/public/template/layout/popupLayout.html
@@ -7,7 +7,7 @@
     <th:block layout:fragment="scriptLink"></th:block>
 </head>
 <body>
-    <div class="alice-wrapper">
+    <div class="z-wrapper">
         <div class="itsm-popup">
             <th:block layout:fragment="content"></th:block>
         </div>
