--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -7,26 +7,28 @@
     <title th:text="#{notice.label.notice}"></title>
 </head>
 <body>
-<th:block layout:fragment="content">
-    <div class="notice-header">
-        <div class="header-title flex-row align-items-baseline">
-            <h1 th:text="#{notice.label.notice}"></h1>
-            <h6 class="description ml-2" th:text="#{notice.msg.portalDescription}"></h6>
+<th:block layout:fragment="portalContent">
+    <div class="main">
+        <div class="notice-header">
+            <div class="header-title flex-row align-items-baseline">
+                <h1 th:text="#{notice.label.notice}"></h1>
+                <h6 class="description ml-2" th:text="#{notice.msg.portalDescription}"></h6>
+            </div>
+            <div class="notice-search">
+                <form id="searchFrm">
+                    <input type="text" class="z-input i-search col-5" id="searchValue" name="searchValue" maxlength="100"
+                           th:placeholder="#{notice.label.searchPlaceholder}"/>
+                    <input type="text" class="z-input i-date-picker search-date col-3" id="fromDt" name="fromDt"/>
+                    <span>~</span>
+                    <input type="text" class="z-input i-date-picker search-date col-3 mr-2" id="searchToDt" name="searchToDt"/>
+                    <input type="hidden" class="search-date" id="toDt" name="toDt" readonly="readonly"/>
+                    <span id="spanTotalCount" class="search-count"></span>
+                </form>
+            </div>
         </div>
-        <div class="notice-search">
-            <form id="searchFrm">
-                <input type="text" class="z-input i-search col-5" id="searchValue" name="searchValue" maxlength="100"
-                       th:placeholder="#{notice.label.searchPlaceholder}"/>
-                <input type="text" class="z-input i-date-picker search-date col-3" id="fromDt" name="fromDt"/>
-                <span>~</span>
-                <input type="text" class="z-input i-date-picker search-date col-3 mr-2" id="searchToDt" name="searchToDt"/>
-                <input type="hidden" class="search-date" id="toDt" name="toDt" readonly="readonly"/>
-                <span id="spanTotalCount" class="search-count"></span>
-            </form>
+        <div class="notice-content">
+            <div class="list" id="noticeList"></div>
         </div>
-    </div>
-    <div class="notice-content">
-        <div class="list" id="noticeList"></div>
     </div>
 </th:block>
 </body>
