--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -28,7 +28,7 @@
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
 </head>
 <body>
-<div class="alice-wrapper">
+<div class="z-wrapper">
     <div class="z-process-container">
         <div class="z-process-header">
             <img class="z-logo"  th:src="@{/assets/media/icons/process/topmenu/icon_process_designer.svg}" width="196" height="25" alt="Process Designer" />
