--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1519,7 +1519,7 @@ label {
   outline: 0;
   border: 0.0625rem solid #339AF0;
 }
-.z-input:read-only {
+.z-input:read-only:not(.tagify) {
   border-color: #ABB0B5;
   border-style: none none none solid;
   border-radius: 0;
@@ -6049,18 +6049,18 @@ body.modal-active {
 .property .z-clipboard .z-input {
   width: 100%;
 }
-.property .z-input {
+.property .z-input:not(.tagify) {
   width: 100%;
   padding: 0 1rem;
   font-size: 0.875rem;
   vertical-align: middle;
 }
-.property .z-input.icon-unit-search {
+.property .z-input:not(.tagify).icon-unit-search {
   background: url("../media/icons/formDesigner/unit/icon_unit_search.svg") no-repeat 97% 50%;
   background-color: #FFFFFF;
   padding-right: 1.875rem;
 }
-.property .z-input.icon-unit-px {
+.property .z-input:not(.tagify).icon-unit-px {
   background: url("../media/icons/formDesigner/unit/icon_unit_px.svg") no-repeat calc(100% - 1rem) 50%;
   background-color: #FFFFFF;
   padding-right: 1.875rem;
