#10923 페이징 처리 - 소스정리 및 주석 보완

--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -55,8 +55,8 @@
             </tr>
     </tbody>
 </table>
-<input th:type="hidden" id="totalCount" name="totalCount" th:value="${pagingInfo.totalCount}">
-<input th:type="hidden" id="totalCountWithoutCondition" name="totalCountWithoutCondition" th:value="${pagingInfo.totalCountWithoutCondition}">
-<input th:type="hidden" id="currentPageNum" name="currentPageNum" th:value="${pagingInfo.currentPageNum}">
-<input th:type="hidden" id="totalPageNum" name="totalPageNum" th:value="${pagingInfo.totalPageNum}">
-<input th:type="hidden" id="orderType" name="totalPageNum" th:value="${pagingInfo.orderType}">
+<input th:type="hidden" id="totalCount" name="totalCount" th:value="${paging.totalCount}">
+<input th:type="hidden" id="totalCountWithoutCondition" name="totalCountWithoutCondition" th:value="${paging.totalCountWithoutCondition}">
+<input th:type="hidden" id="currentPageNum" name="currentPageNum" th:value="${paging.currentPageNum}">
+<input th:type="hidden" id="totalPageNum" name="totalPageNum" th:value="${paging.totalPageNum}">
+<input th:type="hidden" id="orderType" name="orderType" th:value="${paging.orderType}">
