--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -35,7 +35,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="listArea">
-    <div class="notice-content flex-fill">
+    <div class="notice-content list-content flex-fill">
         <div class="list" id="noticeList"></div>
     </div>
 </th:block>
