--- a/src/main/resources/public/template/cmdb/ci/ciListModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciListModal.html
@@ -38,7 +38,7 @@
                 <td style="width: 0%; display: none;" id="classId" th:text="${ciData.classId}"></td>
                 <td style="width: 25%;" class="align-left">
                     <div class="tag-group align-middle">
-                        <input type="text" name="ciListTags" class="z-input tag align-center text-ellipsis"
+                        <input type="text" name="ciListTags" class="align-left text-ellipsis"
                                th:value="${ciData.ciTags}" readonly/>
                     </div>
                 </td>
