--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -2256,6 +2256,7 @@ body.modal-active {
   display: none;
 }
 .tagify.z-input {
+  height: max-content;
   padding: 0;
   border: 0.0625rem solid #CFD5D9;
   border-radius: 0.125rem;
@@ -2268,6 +2269,9 @@ body.modal-active {
 }
 .tagify.z-input > .tagify__input:not(:first-child) {
   padding: 0.25rem;
+}
+.tagify.z-input .tagify__tag__removeBtn {
+  display: inherit;
 }
 .tagify.z-input:hover {
   outline: 0;
@@ -2352,7 +2356,7 @@ body.modal-active {
   white-space: nowrap;
   overflow: hidden;
   word-wrap: normal;
-  min-width: 1ch;
+  max-width: 15.625rem;
   vertical-align: top;
   -webkit-transition: 0.8s ease;
   -moz-transition: 0.8s ease;
